SMCHC-8 fix z-index issue on calendar

--- a/profile/themes/smc_base/scss/elements/opensearch-agenda.scss
+++ b/profile/themes/smc_base/scss/elements/opensearch-agenda.scss
@@ -176,7 +176,7 @@
     right: 0;
     top: 92px;
     width: 280px;
-    z-index: 100;
+    z-index: 2;
 
     .group-by-day {
       width: auto;
